# rlearning

./: CMakeLists.txt  README.md
cmake/: LibCommon.cmake  LibInstall.cmake  Macros.cmake  rLearningConfig.cmake
include/: Classification.h  CrossValidator.h  CvModel.h  DataUtils.h  DecisionTreeRandomCrossValidator.h  DiscreteNaiveBayes.h  FeatureDetector.h  GaussianMAPEstimator.h  HOGModel.h  KMeans.h  KNearestClassifier.h  KNearestNFoldCrossValidator.h  KNearestRandomCrossValidator.h  KernelCache.h  KernelFunc.h  MAPEstimator.h  Model.h  NFoldCrossValidator.h  NaiveBayesRandomCrossValidator.h  ObjectClassificationStatsManager.h  ObjectDetectionStatsManager.h  ObjectDetectionStatsManager_ViewInfo.h  PCA.h  PrecisionRecallFinder.h  ProbEstimator.h  RLearning.h  RandomCrossValidator.h  RangePartsDetector.h  RealObjectSizeResponseSuppressor.h  SVMBaggingNFoldCrossValidator.h  SVMClassifier.h  SVMDataMiner.h  SVMModel.h  SVMNFoldCrossValidator.h  SVMParams.h  SVMTrainer.h  SVMViewExtractTrainer.h  StatsGenerator.h  ViewFeatureDetector.h
include/template/: KernelCache_template.h  Model_template.h  SVMParams_template.h  SVMTrainer_template.h
src/: Classification.cpp  CrossValidator.cpp  CvModel.cpp  DataUtils.cpp  DecisionTreeRandomCrossValidator.cpp  DiscreteNaiveBayes.cpp  FeatureDetector.cpp  GaussianMAPEstimator.cpp  HOGModel.cpp  KMeans.cpp  KNearestClassifier.cpp  KNearestNFoldCrossValidator.cpp  KNearestRandomCrossValidator.cpp  MAPEstimator.cpp  Model.cpp  NFoldCrossValidator.cpp  NaiveBayesRandomCrossValidator.cpp  ObjectClassificationStatsManager.cpp  ObjectDetectionStatsManager.cpp  ObjectDetectionStatsManager_ViewInfo.cpp  PCA.cpp  PrecisionRecallFinder.cpp  RandomCrossValidator.cpp  RangePartsDetector.cpp  RealObjectSizeResponseSuppressor.cpp  SVMBaggingNFoldCrossValidator.cpp  SVMClassifier.cpp  SVMDataMiner.cpp  SVMModel.cpp  SVMNFoldCrossValidator.cpp  SVMParams.cpp  SVMViewExtractTrainer.cpp  StatsGenerator.cpp  ViewFeatureDetector.cpp
testing/DetectionStats/: CMakeLists.txt  main.cpp
testing/PCA/: CMakeLists.txt
testing/PCA/src/: test.cpp
testing/PCAVOC/: CMakeLists.txt  feat_params.cfg
testing/PCAVOC/src/: test.cpp
testing/ViewFeatureDetector/: CMakeLists.txt
testing/ViewFeatureDetector/src/: main.cpp
